--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
                                 <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0"
-                                    id="portfolioModal3Label">Circus Tent</h2>
+                                    id="portfolioModal3Label">Classifying Disaster Tweets</h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -389,11 +389,14 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="" />
+                                <a href="https://github.com/scleary2/nlp_disaster_tweets">
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/github.png" alt="" />
+                                </a>
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
-                                    assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
-                                    velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+                                <p class="mb-5">The goal of this project was to classify tweets related to natural
+                                    disasters as Real or Fake. This could be used to help identify disaster zones in
+                                    real-time based solely on twitter data. I ensembled multiple text classification
+                                    models together to produce a Voting Classifier.
                                 </p>
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
