--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                                 </div>
                                 <!-- Portfolio Modal - Image-->
                                 <a href="https://github.com/scleary2/nlp_disaster_tweets">
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/github.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/github.png" alt="" />
                                 </a>
                                 <!-- Portfolio Modal - Text-->
                                 <p class="mb-5">The goal of this project was to classify tweets related to natural
