--- a/index.html
+++ b/index.html
@@ -482,7 +482,8 @@
                                     to host my model for making detections on images. In addition, I wrote a few bash
                                     scripts to make detections in real-time on video and to make detections based on
                                     youtube url links. Please follow the link
-                                    to check out my app and github.
+                                    to check out my app and
+                                    [github]("https://github.com/scleary2/yolov4_self_driving_car").
                                 </p>
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
