--- a/index.html
+++ b/index.html
@@ -431,11 +431,17 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="" />
+                                <a href="https://github.com/scleary2/Project_5">
+                                    <img class="img-fluid rounded mb-5" src="assets/img/github.png" alt="" />
+                                </a>
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
-                                    assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
-                                    velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+                                <p class="mb-5">Catastrophic wildfires in California have sweeping impacts:
+                                    environmental costs, poor air quality, carbon emissions, homes lost, large numbers
+                                    of people displaced, and suppression costs, to name a few. Our goal is to build a
+                                    convincing argument for the redirection of funds to catastrophic wildfire
+                                    prevention. For this project, we will be focusing on three factors and will set out
+                                    to predict acres burned, fire suppression costs, and structures destroyed over the
+                                    next 10 years.
                                 </p>
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
