--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
                                 <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0"
-                                    id="portfolioModal4Label">Controller</h2>
+                                    id="portfolioModal4Label">Economic Cost of wildfire</h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
