--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
                     <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="#!"><i
                             class="fab fa-fw fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-medium"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://scleary2.medium.com/"><i
+                            class="fab fa-fw fa-medium"></i></a>
                 </div>
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
