--- a/index.html
+++ b/index.html
@@ -256,8 +256,9 @@
                     <h4 class="text-uppercase mb-4">Around the Web</h4>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/scleary2"><i
                             class="fab fa-fw fa-github"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/sclearydatasci1"><i
+                            class="fab fa-fw fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/sean--cleary/"><i
                             class="fab fa-fw fa-linkedin-in"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://scleary2.medium.com/"><i
                             class="fab fa-fw fa-medium"></i></a>
