--- a/index.html
+++ b/index.html
@@ -161,9 +161,13 @@
             <!-- About Section Content-->
             <div class="row">
                 <div class="col-lg-4 ml-auto">
-                    <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download
-                        includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS
-                        stylesheets for easy customization.</p>
+                    <p class="lead">I am a Data Scientist with passions for Natural Language Processing, Computer
+                        Vision, and forecasting. I studied Economics at the University of Wisconsin-Madison and have a
+                        background in public housing and real estate. One of the most rewarding jobs I had was coaching
+                        hockey for 9-10 year olds. I recently completed a Data Science Immersive fellowship through
+                        General Assembly and look
+
+                    </p>
                 </div>
                 <div class="col-lg-4 mr-auto">
                     <p class="lead">You can create your own custom avatar for the masthead, change the icon in the
@@ -171,12 +175,12 @@
                 </div>
             </div>
             <!-- About Section Button-->
-            <div class="text-center mt-4">
+            <!-- <div class="text-center mt-4">
                 <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
                     <i class="fas fa-download mr-2"></i>
                     Free Download!
                 </a>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- Contact Section-->
