--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         Vision, and forecasting. I studied Economics at the University of Wisconsin-Madison and have a
                         background in public housing and real estate. One of the most rewarding jobs I had was coaching
                         hockey for 9-10 year olds. I recently completed a Data Science Immersive fellowship through
-                        General Assembly and look
+                        General Assembly and look forward to further developing my skills in the field of data science.
 
                     </p>
                 </div>
@@ -238,6 +238,13 @@
                         <div id="success"></div>
                         <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton"
                                 type="submit">Send</button></div>
+                        <form action="https://formspree.io/f/{form_id}" method="post">
+                            <label for="email">seanpatrickwilliamcleary2@gmail.com</label>
+                            <input name="Email" id="email" type="email">
+                            <input name="Phone Number" id="phone" type="tel">
+                            <input name="Message" id="message">
+                            <button type="submit">Send</button>
+                        </form>
                     </form>
                 </div>
             </div>
