--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
                         <div id="success"></div>
                         <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton"
                                 type="submit">Send</button></div>
-                        <form action="https://formspree.io/f/{form_id}" method="post">
+                        <!-- <form action="https://formspree.io/f/{form_id}" method="post">
                             <label for="email">seanpatrickwilliamcleary2@gmail.com</label>
                             <input name="Email" id="email" type="email">
                             <input name="Phone Number" id="phone" type="tel">
                             <input name="Message" id="message">
                             <button type="submit">Send</button>
-                        </form>
+                        </form> -->
                     </form>
                 </div>
             </div>
