--- a/index.html
+++ b/index.html
@@ -163,15 +163,28 @@
                 <div class="col-lg-4 ml-auto">
                     <p class="lead">I am a Data Scientist with passions for Natural Language Processing, Computer
                         Vision, and forecasting. I studied Economics at the University of Wisconsin-Madison and have a
-                        background in public housing and real estate. One of the most rewarding jobs I had was coaching
-                        hockey for 9-10 year olds. I recently completed a Data Science Immersive fellowship through
+                        background in public housing and real estate. I recently completed a Data Science Immersive
+                        fellowship through
                         General Assembly and look forward to further developing my skills in the field of data science.
 
                     </p>
                 </div>
                 <div class="col-lg-4 mr-auto">
-                    <p class="lead">You can create your own custom avatar for the masthead, change the icon in the
-                        dividers, and add your email address to the contact form to make it fully functional!</p>
+                    <p class="lead">Skills:
+                        Python
+                        Pandas
+                        Numpy
+                        Data Visualization
+                        Natural Language Processing
+                        Computer Vision
+                        Sci-kit learn
+                        Keras
+                        Streamlit
+                        Heroku
+                        Tensorflow
+                        BeautifulSoup
+
+
                 </div>
             </div>
             <!-- About Section Button-->
