--- a/index.html
+++ b/index.html
@@ -170,19 +170,21 @@
                     </p>
                 </div>
                 <div class="col-lg-4 mr-auto">
-                    <p class="lead">Skills:
-                        Python
-                        Pandas
-                        Numpy
+                    <h4>skills</h4>
+                    <li>Python </li>
+                    <li>Pandas</li>
+                    <li>Numpy</li>
+                    <li>
                         Data Visualization
-                        Natural Language Processing
-                        Computer Vision
-                        Sci-kit learn
-                        Keras
-                        Streamlit
-                        Heroku
-                        Tensorflow
-                        BeautifulSoup
+                    </li>
+                    <li>Natural Language Processing</li>
+                    <li>Computer Vision</li>
+                    <li>Sci-kit learn</li>
+                    <li>Keras</li>
+                    <li>Streamlit</li>
+                    <li>Heroku</li>
+                    <li>Tensorflow</li>
+                    <li>BeautifulSoup</li>
 
 
                 </div>
