--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </p>
                 </div>
                 <div class="col-lg-4 mr-auto">
-                    <h4>skills</h4>
+                    <h4>Skills</h4>
                     <li>Python </li>
                     <li>Pandas</li>
                     <li>Numpy</li>
