--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="container d-flex align-items-center flex-column">
 
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/me.jpg" alt="" />
+                <img class="masthead-avatar mb-5" src="assets/img/me2.jpg" alt="" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Sean Cleary</h1>
                 <!-- Icon Divider-->
